--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@unocss/nuxt": "^0.48.0",
-    "nuxt": "3.0.0",
-    "prettier": "^2.8.1"
-  },
-  "dependencies": {
-    "@anu-vue/nuxt": "^0.12.0",
-    "@anu-vue/preset-theme-default": "^0.12.0"
-  }
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "devDependencies": {
+        "@iconify-json/carbon": "^1.1.13",
+        "@iconify-json/la": "^1.1.3",
+        "@iconify-json/material-symbols": "^1.1.26",
+        "@nuxtjs/color-mode": "^3.2.0",
+        "@unocss/nuxt": "^0.48.0",
+        "nuxt": "3.0.0",
+        "prettier": "^2.8.1"
+    },
+    "dependencies": {
+        "@anu-vue/nuxt": "^0.12.0",
+        "@anu-vue/preset-theme-default": "^0.12.0"
+    }
 }
